# avr-playground

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  QUICKSTART.md  README.md  build.sh  install-dependencies.sh  validate.sh
.github/workflows/: build.yml
cmake/: avr-clang-toolchain.cmake  avr-gcc-toolchain.cmake
src/: main.c  uart.c  uart.h
